# QuantUI-local

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  PORTING_PLAN.md  README.md  SECURITY.md  launch-app.bat  launch-dev.bat  launch-native.bat  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  pages.yml
apptainer/: BUILD.md  README.md  build.sh  quantui-local.def  quantui.def
docs/: index.html
local-setup/: environment.yml
notebooks/: _inspect_nb.py  app_test.ipynb  molecule_computations.ipynb
notebooks/tutorials/: 01_first_calculation.ipynb  02_basis_set_study.ipynb  03_multiplicity_radicals.ipynb  04_charged_species.ipynb  05_comparing_results.ipynb  README.md
quantui/: __init__.py  app.py  app_analysis.py  app_builders.py  app_exports.py  app_formatters.py  app_history.py  app_runflow.py  app_visualization.py  ase_bridge.py  benchmarks.py  calc_log.py  calculator.py  comparison.py  config.py  freq_calc.py  help_content.py  ir_plot.py  issue_tracker.py  log_utils.py  molecule.py  nmr_calc.py  optimizer.py  orbital_visualization.py  pes_scan.py  preopt.py  progress.py  pubchem.py  results_storage.py  security.py  session_calc.py  tddft_calc.py  utils.py  visualization_py3dmol.py
tests/: __init__.py  conftest.py  test_app.py  test_app_formatters.py  test_ase_bridge.py  test_benchmarks.py  test_calculator.py  test_code_quality.py  test_comparison.py  test_freq_analysis_history.py  test_freq_calc.py  test_geo_opt_analysis_history.py  test_help_content.py  test_ir_plot.py  test_issue_tracker.py  test_molecule.py  test_nmr_analysis_history.py  test_nmr_calc.py  test_notebook_interactions.py  test_notebook_workflows.py  test_optimizer.py  test_orbital_visualization.py  test_pes_scan.py  test_pes_scan_analysis_history.py  test_phase1.py  test_preopt.py  test_progress.py  test_pubchem.py  test_results_storage.py  test_security.py  test_session_calc.py  test_sp_analysis_history.py  test_tddft_analysis_history.py  test_templates.py  test_utils.py  test_visualization.py  test_visualization_integration.py
