[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quantui"
version = "0.1.0"
description = "Educational quantum chemistry interface for local PySCF calculations"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    {name = "Jonathan Schultz", email = "nccu-schultz-lab@users.noreply.github.com"},
]
keywords = ["quantum chemistry", "education", "PySCF", "jupyter", "local", "teaching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "notebook>=7.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "py3Dmol>=2.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.0.0",
    "plotlymol>=0.2.1",
]

[tool.setuptools]
packages = ["quantui"]

[project.optional-dependencies]
# PySCF requires Linux/macOS/WSL — not available on Windows natively.
# Use the Apptainer container (apptainer/quantui.def) for Windows.
pyscf = [
    "pyscf>=2.3.0",
]

# ASE: structure I/O, extended molecule library, geometry optimisation
ase = [
    "ase>=3.22.0",
]

# Voilà app server — hides notebook code; students see only the widget UI.
# Run with: voila notebooks/molecule_computations.ipynb
app = [
    "voila>=0.5.0",
    "ipykernel>=6.0.0",
]

# Notebook smoke-test dependencies
notebook = [
    "nbmake>=1.4.0",
    "ipykernel>=6.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports, etc.)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear (common bug patterns)
]
ignore = [
    "E501",  # line too long — black handles this
    "B008",  # function calls in default args — common in teaching code
    # The rules below fire on verbatim-copied source files that we don't
    # want to diverge from the upstream QuantUI repo unnecessarily.
    # They are style-only and do not affect correctness.
    "UP006",  # use built-in dict/list/tuple for annotations (requires 3.9 runtime)
    "UP007",  # use X | Y for unions (requires 3.10 at runtime)
    "UP035",  # typing.Dict/List/Tuple deprecated — same as UP006
    "B904",   # raise-without-from in except — cosmetic, verbatim copies
    "E722",   # bare except — cosmetic, verbatim copies
]

[tool.ruff.lint.per-file-ignores]
# __init__.py sets up a NullHandler before deferred optional imports — E402 is intentional
"quantui/__init__.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["quantui"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pyscf.*",
    "py3Dmol.*",
    "IPython.*",
    "ipywidgets.*",
    "psutil",
    "ase.*",
    "rdkit.*",
    "plotlymol3d.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=quantui",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring PySCF",
    "unit: marks tests as unit tests",
    "network: marks tests that require network connectivity",
    "notebook: marks notebook smoke tests",
]

[tool.coverage.run]
source = ["quantui"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
